# stellar-gateway

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  Gatewayfile  README.md  docker-compose.acceptance.yml  renovate.json
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-image.yml  quality.yml  release-please.yml  security.yml
docs/: stellar-gateway-prd.md
docs/adr/: 0001-permissive-caddyfile-migration.md
docs/feature-spec/: caddy-parity-local-acceptance-feature-spec.md  stellar-gateway-v0-2-web-gateway-feature-spec.md
docs/runbooks/: operations.md
scripts/: readiness-check.sh
src/: acme.rs  acme_issuer.rs  cert_cache.rs  config.rs  error.rs  gateway_plan.rs  lib.rs  main.rs  metrics.rs  observability.rs  proxy.rs  reload.rs  routing.rs  tls.rs
tests/: certificate_cache_reload.rs  code_review_findings_red.rs  gateway_plan_core.rs  gatewayfile_config.rs  logging_smoke.rs  observability_logs.rs  on_demand_issuance.rs  routing_proxy_core.rs  routing_proxy_smoke.rs  tls_acme_policy.rs
tests/acceptance/: docker_compose_acceptance.py
