[package]
name = "stellar-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
http = "1.4.0"
hyper = { version = "1.9.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "http2", "tokio"] }
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "rcgen", "ring"] }
once_cell = "1.21.4"
openssl = "0.10.79"
pingora = { version = "0.8.0", features = ["lb", "openssl"] }
rcgen = "0.14.7"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
signal-hook = "0.4.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
